force-app/main/default/objects/docutizexa__AttachmentDownloadPageLog__c/docutizexa__AttachmentDownloadPageLog__c.object-meta.xml
<CustomObject>
    <label>Attachment Download Page Log</label>
    <nameField>
        <displayFormat>Log-{0000000000}</displayFormat>
        <label>Log No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachment Download Page Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>