force-app/main/default/objects/docutizexa__AttachmentDownloadPageLog__c/fields/docutizexa__EventType__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__EventType__c</fullName>
    <label>Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>