force-app/main/default/objects/docutizexa__AttachmentDownloadPageLog__c/fields/docutizexa__LogDate__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__LogDate__c</fullName>
    <label>Log Date</label>
    <length>19</length>
    <type>Text</type>
</CustomField>